docs: remove metadata from ipynb

--- a/docs/features/models/KBQA.ipynb
+++ b/docs/features/models/KBQA.ipynb
@@ -2,27 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "zkBbYz5gd0Qb"
-   },
+   "metadata": {},
    "source": [
     "#### Knowledge Base Question Answering (KBQA)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "jROwMmkkd192"
-   },
+   "metadata": {},
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/nastyachizhikova/doc_test/blob/main/source/notebooks/KBQA.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "SfBHSYw1eg_s"
-   },
+   "metadata": {},
    "source": [
     "# Table of contents \n",
     "\n",
@@ -49,18 +43,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "kAsQolJvqy2J"
-   },
+   "metadata": {},
    "source": [
     "# 1. Introduction to the task"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "_0wnKtQ6q4Y2"
-   },
+   "metadata": {},
    "source": [
     "The knowledge base:\n",
     "\n",
@@ -81,9 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "dw5bbJaDrfCY"
-   },
+   "metadata": {},
    "source": [
     "Here are some of the most popular types of questions supported by the model:\n",
     "\n",
@@ -96,9 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "81rOHLgHuKrt"
-   },
+   "metadata": {},
    "source": [
     "The following models are used to find the answer (the links are for the English language model):\n",
     "\n",
@@ -111,18 +97,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "gE9vmxE5gOFB"
-   },
+   "metadata": {},
    "source": [
     "# 2. Get started with the model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7QoylykigVC1"
-   },
+   "metadata": {},
    "source": [
     "First make sure you have the DeepPavlov Library installed.\n",
     "[More info about the first installation](https://deeppavlov-test.readthedocs.io/en/latest/notebooks/Get%20Started%20with%20DeepPavlov.html)"
@@ -131,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "o-GoKStT9l_z"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! pip install --q deeppavlov"
@@ -141,9 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uBUdjrmVglAc"
-   },
+   "metadata": {},
    "source": [
     "Then make sure that all the required packages for the model are installed."
    ]
@@ -151,9 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "Us0pOnV3gozO"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov install kbqa_cq_en\n",
@@ -162,9 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wdvG4oJDjipG"
-   },
+   "metadata": {},
    "source": [
     "`kbqa_cq_en` and `kbqa_cq_rus` here are the names of the model's *config_files*. [What is a Config File?](https://deeppavlov-test.readthedocs.io/en/latest/notebooks/Config%20File.html) \n",
     "\n",
@@ -198,9 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "7vdoLwh_gEnf"
-   },
+   "metadata": {},
    "source": [
     "\n",
     "# 4. Use the model for prediction"
@@ -208,18 +180,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rxCZdYgAogow"
-   },
+   "metadata": {},
    "source": [
     "## 4.1 Predict using Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "W0CEi3KnoqHP"
-   },
+   "metadata": {},
    "source": [
     "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
@@ -227,9 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "jtkd3kaIotg3"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from deeppavlov import configs, build_model\n",
@@ -239,9 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "184juNJGp0s-"
-   },
+   "metadata": {},
    "source": [
     "**Input**: List[sentences]\n",
     "\n",
@@ -250,14 +214,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "0gzZMyy-p5BV",
-    "outputId": "c17624a4-94d2-4aed-bf69-cc956828239f"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -267,7 +225,7 @@
        " [['SELECT ?answer WHERE { wd:Q134773 wdt:P57 ?answer. }']]]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,14 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "VYhqN59Ip6CB",
-    "outputId": "4970d3b9-3376-4e9a-98a2-1116d1b639de"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -295,7 +247,7 @@
        " [['SELECT ?answer WHERE { wd:Q11613 p:P39 ?ent . ?ent ps:P39 ?answer . ?ent ?p ?x filter(contains(?x, n)). }']]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,14 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "yz63pzId2XFq",
-    "outputId": "f23128ef-ebc4-40b8-d064-c6c7289c635a"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -323,7 +269,7 @@
        " [['SELECT ?answer WHERE { wd:Q615 p:P54 ?ent . ?ent ps:P54 ?answer . ?ent ?p ?x filter(contains(?x, n)). }']]]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,9 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bQhXic7atp4p"
-   },
+   "metadata": {},
    "source": [
     "KBQA model for complex question answering in Russian can be used from Python using the following code:"
    ]
@@ -344,9 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "5n-0oBPftrdu"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from deeppavlov import configs, build_model\n",
@@ -356,14 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "zHhEL4zmtyA2",
-    "outputId": "12c43b93-81cb-4ea2-c534-2e2bc337df50"
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -373,7 +309,7 @@
        " [['SELECT ?answer WHERE { wd:Q7200 wdt:P569 ?answer. }']]]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,18 +320,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "JGU-3NPUgFzV"
-   },
+   "metadata": {},
    "source": [
     "## 4.2 Predict using CLI"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "e35SugVcka6J"
-   },
+   "metadata": {},
    "source": [
     "You can also get predictions in an interactive mode through CLI."
    ]
@@ -403,9 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "PRpVxAZGlmue"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov interact kbqa_сq_en [-d]\n",
@@ -414,18 +344,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "-EeK4aBan0oY"
-   },
+   "metadata": {},
    "source": [
     "`-d` is an optional download key (alternative to `download=True` in Python code). It is used to download the pre-trained model along with embeddings and all other files needed to run the model."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NyQE-4CkoAki"
-   },
+   "metadata": {},
    "source": [
     "Or make predictions for samples from *stdin*."
    ]
@@ -433,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "FT0Wrrf6oGkO"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov predict kbqa_сq_en -f <file-name>\n",
@@ -444,18 +368,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "d60Bhb7Y2o9C"
-   },
+   "metadata": {},
    "source": [
     "## 4.3 Using entity linking and Wiki parser as standalone tools for KBQA"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "5OQ7cQciH3cN"
-   },
+   "metadata": {},
    "source": [
     "Default configuration for KBQA was designed to use all of the supporting models together as a part of the KBQA pipeline. However, there might be a case when you want to work with some of these models in addition to KBQA.\n",
     "\n",
@@ -464,18 +384,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "nEatXe3bsikm"
-   },
+   "metadata": {},
    "source": [
     "Don’t forget to replace the `url` parameter values in the examples below with correct URLs."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "poQtA82AH_Zp"
-   },
+   "metadata": {},
    "source": [
     "Config [entity_linking_en](https://github.com/deeppavlov/DeepPavlov/blob/1.0.0rc1/deeppavlov/configs/entity_extraction/entity_linking_en.json) can be used with the following commands:"
    ]
@@ -483,9 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "2SXAQmNZNWu4"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov install entity_linking_en -d"
@@ -494,9 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "A6BDvawNNR1y"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov riseapi entity_linking_en [-d] [-p <port>]"
@@ -505,9 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "ENDh34ymNyNB"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
@@ -520,9 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "rS941Q7Dl9lu"
-   },
+   "metadata": {},
    "source": [
     "Config [wiki_parser](https://github.com/deeppavlov/DeepPavlov/blob/1.0.0rc1/deeppavlov/configs/kbqa/wiki_parser.json) can be used with the following command:"
    ]
@@ -530,9 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "HDhxJMSBncBb"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "! python -m deeppavlov riseapi wiki_parser [-d] [-p <port>]"
@@ -540,27 +446,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wXPyn_htnfIU"
-   },
+   "metadata": {},
    "source": [
     "Arguments of the annotator are `parser_info` (what we want to extract from Wikidata) and `query`."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "AEaWxILWnpv2"
-   },
+   "metadata": {},
    "source": [
     "**Examples of queries:**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Gy1nB90rnrOv"
-   },
+   "metadata": {},
    "source": [
     "To extract triplets for entities, the `query` argument should be the list of entities ids. `parser_info` should be the list of “find_triplets” strings."
    ]
@@ -568,9 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "Xq1qJ7Sgnzk9"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "requests.post(wiki_parser_url, json = {\"parser_info\": [\"find_triplets\"], \"query\": [\"Q159\"]}).json()"
@@ -578,9 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "DAcnXpagn65P"
-   },
+   "metadata": {},
    "source": [
     "To extract all relations of the entities, the `query` argument should be the list of entities ids, and `parser_info` should be the list of “find_rels” strings."
    ]
@@ -588,9 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "YV0lYw_cn-ke"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "requests.post(wiki_parser_url, json = {\"parser_info\": [\"find_rels\"], \"query\": [\"Q159\"]}).json()"
@@ -598,9 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Jv612kcsp5WA"
-   },
+   "metadata": {},
    "source": [
     "To find labels for entities ids, the `query` argument should be the list of entities ids, and `parser_info` should be the list of “find_label” strings."
    ]
@@ -608,9 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "1ScgneXfp_hK"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "requests.post(wiki_parser_url, json = {\"parser_info\": [\"find_label\"], \"query\": [[\"Q159\", \"\"]]}).json()"
@@ -618,36 +508,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "WMlEj0TgqB8w"
-   },
+   "metadata": {},
    "source": [
     "In this example, the second element of the list (an empty string) can be replaced with a sentence."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8IRh2vnHo02E"
-   },
+   "metadata": {},
    "source": [
     "To execute SPARQL queries, the `query` argument should be the list of tuples with the info about SPARQL queries, and `parser_info` should be the list of “query_execute” strings."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Q4CV0IEVo5XU"
-   },
+   "metadata": {},
    "source": [
     "Let us consider an example of the question “What is the deepest lake in Russia?” with the corresponding SPARQL query `SELECT ?ent WHERE { ?ent wdt:P31 wd:T1 . ?ent wdt:R1 ?obj . ?ent wdt:R2 wd:E1 } ORDER BY ASC(?obj) LIMIT 5`"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NNB2IghhpFXC"
-   },
+   "metadata": {},
    "source": [
     "Arguments:\n",
     "\n",
@@ -660,9 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "uxFVEmG9pcYu"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "requests.post(\"wiki_parser_url\", json = {\"parser_info\": [\"query_execute\"], \"query\": [[[\"?obj\"], [[\"Q159\", \"P36\", \"?obj\"]], [], [], True]]}).json()"
@@ -670,18 +550,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "VfQYXW7vqQyx"
-   },
+   "metadata": {},
    "source": [
     "To use entity linking model in KBQA, you should add following API Requester component to the `pipe` in the *config_file*:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "lq2cmN7oqYf0"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "{\n",
@@ -696,18 +572,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "DSdpjCO8sQDJ"
-   },
+   "metadata": {},
    "source": [
     "To use Wiki parser service in KBQA, you should add following API Requester component to the `pipe` in the *config_file*:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "79kunvBqsZyY"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "{\n",
@@ -722,9 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "0WjCY0Dwyuik"
-   },
+   "metadata": {},
    "source": [
     "# 5. Customize the model"
    ]
@@ -795,27 +665,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "h05zAMtCyzfy"
-   },
+   "metadata": {},
    "source": [
     "### Train Query Prediction Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "20RshdMEy5zP"
-   },
+   "metadata": {},
    "source": [
     "The dataset for training query prediction model consists of three *.csv* files: *train.csv*, *valid.csv* and *test.csv*. Each line in this file contains question and corresponding query template type, for example:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "HT9PGxhJzGpG"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "\"What is the longest river in the UK?\", 6\n",
@@ -824,27 +688,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "tmX1rNtPzMKS"
-   },
+   "metadata": {},
    "source": [
     "### Train Entity Detection Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Vs1NANydzQbc"
-   },
+   "metadata": {},
    "source": [
     "The dataset is a pickle file. The dataset must be split into three parts: train, test, and validation. Each part is a list of tuples of question tokens and tags for each token. An example of training sample:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "6aYCbAMRz2yB"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "(['What', 'is', 'the', 'complete', 'list', 'of', 'records', 'released', 'by', 'Jerry', 'Lee', 'Lewis', '?'],\n",
@@ -854,36 +712,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "NzOwuDE-z5yj"
-   },
+   "metadata": {},
    "source": [
     "`B-T` corresponds to tokens of entity types substrings beginning, `I-T` - to tokens of inner part of entity types substrings, `B-E` and `I-E` - for entities, `O` - for other tokens."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "8_0aozkr0svD"
-   },
+   "metadata": {},
    "source": [
     "### Train Path Ranking Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uIAzPymp04JC"
-   },
+   "metadata": {},
    "source": [
     "The dataset (in pickle format) is a dict of three keys: \"train\", \"valid\" and \"test\". The value by each key is the list of samples, an example of a sample:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "bdS26so_0-Ay"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "(['What is the Main St. Exile label, which Nik Powell co-founded?', ['record label', 'founded by']], '1')\n",
@@ -899,27 +749,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "wA6O5unC29K4"
-   },
+   "metadata": {},
    "source": [
     "### Adding Templates For New SPARQL Queries"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "Twp6-nTt3E0a"
-   },
+   "metadata": {},
    "source": [
     "Templates can be added to sparql_queries.json file, which is a dictionary, where keys are template types and values are templates with additional information. An example of a template:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "oYPU4CGy3IFg"
-   },
+   "metadata": {},
    "source": [
     "```\n",
     "{\n",
@@ -936,9 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "4oBAG4_q3YTW"
-   },
+   "metadata": {},
    "source": [
     "* `query_template` is the template of the SPARQL query;\n",
     "* `rank_rels` is a list which defines whether to rank relations, in this example **p:R1** relations we extract from Wikidata for **wd:E1** entities and rank with RelRanker, **ps:R1** and **?p** relations we do not extract or rank;\n",
@@ -968,8 +810,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
