--- a/docs/features/models/SQuAD.ipynb
+++ b/docs/features/models/SQuAD.ipynb
@@ -450,7 +450,7 @@
        "[['a library for NLP and dialog systems'], [14], [200928.390625]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,8 +533,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
