--- a/docs/features/models/neural_ranking.ipynb
+++ b/docs/features/models/neural_ranking.ipynb
@@ -367,8 +367,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
